--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -38,7 +38,7 @@
                 <label for="project_description"><b>Project Description</b></label>
                 <input type="text" placeholder="Enter Project Description" name="project_description" required>
         
-                <button type="submit">submit</button>
+                <button type="submit">作成</button>
             </form>
         </div>
     </div>
