--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -107,7 +107,7 @@
                     <% } %>
                 </div>
         
-                <button type="submit">submit</button>
+                <button type="submit">作成</button>
             </form>
         </div>
     </div>
