--- a/views/edit_project.ejs
+++ b/views/edit_project.ejs
@@ -38,7 +38,7 @@
                 <label for="project_description"><b>Project Description</b></label>
                 <input type="text" value="<%= projectData[0].description%>" name="project_description" required>
         
-                <button type="submit">submit</button>
+                <button type="submit">変更を保存</button>
             </form>
         </div>
     </div>
