--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -54,64 +54,69 @@
                 <label for="risk"><b>Risk</b></label>
                 <input type="text" value="<%= taskData[0].risk %>" name="risk" required>
                 <br>
-        
-                <label for="responsible"><b>Responsible</b></label>
-                <% if(users) { %>
-                    <select name="responsible">
-                        <% users.forEach( row => { %>
-                            <option value="<%= row.name%>" <%= row.name === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
-                        <% }) %>
+
+                <div class="selector">
+                    <label for="responsible"><b>Responsible</b></label>
+                    <% if(users) { %>
+                        <select name="responsible">
+                            <% users.forEach( row => { %>
+                                <option value="<%= row.name%>" <%= row.name === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
+                            <% }) %>
+                        </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Responsible" name="responsible" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="accountable"><b>Accountable</b></label>
+                    <%if(users) { %>
+                        <select name="accountable">
+                            <% users.forEach( row => { %>
+                                <option value="<%= row.name%>" <%= row.name === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
+                            <% }) %>
+                        </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Accountable" name="accountable" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="consulted"><b>Consulted</b></label>
+                    <% if(users) { %>
+                        <select name="consulted">
+                            <% users.forEach( row => { %>
+                                <option value="<%= row.name%>" <%= row.name === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
+                            <% }) %>
+                        </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Consulted" name="consulted" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="informed"><b>Informed</b></label>
+                    <% if(users) { %>
+                        <select name="informed">
+                            <% users.forEach( row => { %>
+                                <option value="<%= row.name%>" <%= row.name === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
+                            <% }) %>
+                        </select>
+                    <% } else { %>
+                        <input type="text" placeholder="Enter Informed" name="informed" required>
+                    <% } %>
+                </div>
+
+                <div class="selector">
+                    <label for="progress"><b>Progress</b></label>
+                    <select name="progress">
+                        <option value="-1" <%= taskData[0].completion === -1 ? 'selected' : ''%>>not started</option>
+                        <option value="0" <%= taskData[0].completion === 0 ? 'selected' : ''%>>in progress</option>
+                        <option value="1" <%= taskData[0].completion === 1 ? 'selected' : ''%>>finished</option>
                     </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Responsible" name="responsible" required>
-                <% } %>
-                <br>
+                </div>
         
-                <label for="accountable"><b>Accountable</b></label>
-                <%if(users) { %>
-                    <select name="accountable">
-                        <% users.forEach( row => { %>
-                            <option value="<%= row.name%>" <%= row.name === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Accountable" name="accountable" required>
-                <% } %>
-                <br>
-        
-                <label for="consulted"><b>Consulted</b></label>
-                <% if(users) { %>
-                    <select name="consulted">
-                        <% users.forEach( row => { %>
-                            <option value="<%= row.name%>" <%= row.name === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Consulted" name="consulted" required>
-                <% } %>
-                <br>
-        
-                <label for="informed"><b>Informed</b></label>
-                <% if(users) { %>
-                    <select name="informed">
-                        <% users.forEach( row => { %>
-                            <option value="<%= row.name%>" <%= row.name === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                <% } else { %>
-                    <input type="text" placeholder="Enter Informed" name="informed" required>
-                <% } %>
-                <br>
-        
-                <label for="progress"><b>Progress</b></label>
-                <select name="progress">
-                    <option value="-1" <%= taskData[0].completion === -1 ? 'selected' : ''%>>not started</option>
-                    <option value="0" <%= taskData[0].completion === 0 ? 'selected' : ''%>>in progress</option>
-                    <option value="1" <%= taskData[0].completion === 1 ? 'selected' : ''%>>finished</option>
-                </select>
-                <br>
-        
-                <button type="submit">submit</button>
+                <button type="submit">変更を保存</button>
             </form>
         </div>
     </div>
