--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,14 +28,15 @@
         <% } %>
     </div>
     <div class="content">
-        <div class="header">
-            <h1>タスク管理ソフト</h1>
-        </div>
 
         <div class="section">
             <h2>概要</h2>
             <p>このタスク管理ソフトはタスク管理ソフトです。なんか、うまく使ってください。結構頑張って作ったんで、、</p>
-            <form action="/login" method="get"><button type="submit">ログイン</button></form>
+            <% if(userID) { %>
+                <form action="/dashboard" method="get"><button type="submit">ダッシュボード</button></form>
+            <% }else { %>
+                <form action="/login" method="get"><button type="submit">ログイン</button></form>
+            <% } %>
         </div>
     </div>
 </div>
