--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -42,7 +42,7 @@
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required>
         
-                <button type="submit">submit</button>
+                <button type="submit">作成</button>
             </form>
         </div>
     </div>
