--- a/views/project.ejs
+++ b/views/project.ejs
@@ -30,9 +30,6 @@
         </div>
 
         <div class="content">
-            <div class="header">
-                <h1>プロジェクト情報</h1>
-            </div>
 
             <div class="breadcrumb">
                 <a href="/">ホーム</a>
@@ -45,6 +42,7 @@
             <div class="section">
                 <h2><%= projectData[0].name %></h2>
                 <p><%= projectData[0].description %></p>
+                <div><a href="/project/edit-project?pid=<%= projectData[0].projectID %>"><button>タスクを編集</button></a></div>
             </div>
 
             <div class="section">
