added password system when creating account

--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -41,6 +41,9 @@
         
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required>
+
+                <label for="keyword"><b>Keyword</b></label>
+                <input type="password" placeholder="Enter keyword" name="keyword" required>
         
                 <button type="submit">作成</button>
             </form>
