--- a/views/files.ejs
+++ b/views/files.ejs
@@ -27,23 +27,26 @@
             </ul>
         <% } %>
     </div>
+    
     <div class="content">
         <div class="section">
-            <h2>ログイン</h2>
-            <form method="post" action="/login">
-                <label for="mail"><b>Mail Address</b></label>
-                <input type="text" placeholder="Enter Username" name="mail" required>
-                <br>
-        
-                <label for="password"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="password" required>
-
-                <label for="keyword"><b>Keyword</b></label>
-                <input type="password" placeholder="Enter keyword" name="keyword" required>
-        
-                <button type="submit">Login</button>
-            </form>
-        </div>
+            <h2>ファイル一覧</h2>
+            <% if(files && files.length > 0) { %>
+                <% files.forEach(file => { %>
+                    <li>
+                        <span style="display: inline;">
+                            <a href="<%= file.fileUrl %>" target="_blank"><%= file.fileName.replace(/^[^_]+_/, '') %></a>
+                        </span>
+                        <form action="/task/delete-file" method="post" style="display: inline;">
+                            <input type="hidden" value="<%= file.id %>" name="fileID">
+                            <input type="hidden" value="<%= taskData.taskID %>" name="taskID">
+                            <button type="submit">削除</button>
+                        </form>
+                    </li>
+                <% }) %>
+            <% }else { %>
+                <p>まだ添付ファイルはありません</p>
+            <% } %>
     </div>
 </div>
 </body>
