controling task manageing with userID, not user name

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -217,6 +217,8 @@ button:hover {
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 0.5em;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
 }
 
 .section .comments li > div:first-child {
