--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -59,7 +59,7 @@
                     <% if(users) { %>
                     <select name="responsible">
                         <% users.forEach( row => { %>
-                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <option value="<%= row.userID%>"><%= row.name %></option>
                         <% }) %>
                     </select>
                     <% } else { %>
@@ -72,7 +72,7 @@
                     <%if(users) { %>
                     <select name="accountable">
                         <% users.forEach( row => { %>
-                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <option value="<%= row.userID%>"><%= row.name %></option>
                         <% }) %>
                     </select>
                     <% } else { %>
@@ -85,7 +85,7 @@
                     <% if(users) { %>
                     <select name="consulted">
                         <% users.forEach( row => { %>
-                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <option value="<%= row.userID%>"><%= row.name %></option>
                         <% }) %>
                     </select>
                     <% } else { %>
@@ -98,7 +98,7 @@
                     <% if(users) { %>
                     <select name="informed">
                         <% users.forEach( row => { %>
-                        <option value="<%= row.name%>"><%= row.name %></option>
+                        <option value="<%= row.userID%>"><%= row.name %></option>
                         <% }) %>
                     </select>
                     <% } else { %>
@@ -112,4 +112,7 @@
     </div>
 </div>
 </body>
+<script>
+    console.log(users);
+</script>
 </html>
