--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -59,7 +59,7 @@
                     <% if(users) { %>
                         <select name="responsible">
                             <% users.forEach( row => { %>
-                                <option value="<%= row.name%>" <%= row.name === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
+                                <option value="<%= row.userID%>" <%= row.userID === taskData[0].responsible ? 'selected' : '' %>><%= row.name %></option>
                             <% }) %>
                         </select>
                     <% } else { %>
@@ -72,7 +72,7 @@
                     <%if(users) { %>
                         <select name="accountable">
                             <% users.forEach( row => { %>
-                                <option value="<%= row.name%>" <%= row.name === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
+                                <option value="<%= row.userID%>" <%= row.userID === taskData[0].accountable ? 'selected' : '' %>><%= row.name %></option>
                             <% }) %>
                         </select>
                     <% } else { %>
@@ -85,7 +85,7 @@
                     <% if(users) { %>
                         <select name="consulted">
                             <% users.forEach( row => { %>
-                                <option value="<%= row.name%>" <%= row.name === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
+                                <option value="<%= row.userID%>" <%= row.userID === taskData[0].consulted ? 'selected' : '' %>><%= row.name %></option>
                             <% }) %>
                         </select>
                     <% } else { %>
@@ -98,7 +98,7 @@
                     <% if(users) { %>
                         <select name="informed">
                             <% users.forEach( row => { %>
-                                <option value="<%= row.name%>" <%= row.name === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
+                                <option value="<%= row.userID%>" <%= row.userID === taskData[0].informed ? 'selected' : '' %>><%= row.name %></option>
                             <% }) %>
                         </select>
                     <% } else { %>
