--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/stylesheets/style.css" rel="stylesheet">
+    <script>
+        if (window.innerWidth <= 768) {
+            document.write('<link rel="stylesheet" href="/stylesheets/mobile.css">');
+        } else {
+            document.write('<link rel="stylesheet" href="/stylesheets/desktop.css">');
+        }
+    </script>>
     <title>Document</title>
 </head>
 <body>
