--- a/views/project.ejs
+++ b/views/project.ejs
@@ -76,7 +76,7 @@
                                 <% } else if(row.completion === 0){ %>
                                     作業中
                                 <% } else { %>
-                                    始まってすらいない
+                                    開始前
                                 <% } %></td>
                                 <td><form action="/task/delete-task" method="post"><input type="hidden" name="taskID" value="<%= row.taskID%>"><button type="submit">削除</button></form></td>
                             </tr>
