--- a/views/task.ejs
+++ b/views/task.ejs
@@ -69,7 +69,7 @@
                     <% } else if(taskData[0].completion === 0){ %>
                         作業中
                     <% } else { %>
-                        始まってすらいない
+                        開始前
                     <% } %>
                 </p>
                 <div><a href="/task/edit-task?tid=<%= taskData[0].taskID %>"><button>タスクを編集</button></a></div>
